Working random forest not working voting

--- a/notebooks/SVM.ipynb
+++ b/notebooks/SVM.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "id": "698ae165",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# example of grid searching key hyperparametres for SVC\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.model_selection import RepeatedStratifiedKFold\n",
@@ -16,12 +18,15 @@
     "from sklearn.metrics import classification_report\n",
     "from sklearn.svm import SVC\n",
     "import pandas as pd\n",
-    "from sklearn.metrics import accuracy_score\n"
+    "from sklearn.metrics import accuracy_score\n",
+    "from matplotlib import pyplot as plt\n",
+    "from sklearn import svm\n",
+    "from sklearn.inspection import permutation_importance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "id": "8fa9a426",
    "metadata": {},
    "outputs": [],
@@ -38,6 +43,96 @@
     "y_val = val_data.iloc[:, -1]\n",
     "X_test = test_data.iloc[:, 1:-1]\n",
     "y_test = test_data.iloc[:, -1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "1e6c6e32",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'SVC' object has no attribute 'feature_importances_'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[21], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m model \u001b[38;5;241m=\u001b[39m SVC()\n\u001b[1;32m      2\u001b[0m model\u001b[38;5;241m.\u001b[39mfit(X_train,y_train)\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfeature_importances_\u001b[49m) \u001b[38;5;66;03m#use inbuilt class feature_importances of tree based classifiers\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m#plot graph of feature importances for better visualization\u001b[39;00m\n\u001b[1;32m      5\u001b[0m feat_importances \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mSeries(model\u001b[38;5;241m.\u001b[39mfeature_importances_, index\u001b[38;5;241m=\u001b[39mX_train\u001b[38;5;241m.\u001b[39mcolumns)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'SVC' object has no attribute 'feature_importances_'"
+     ]
+    }
+   ],
+   "source": [
+    "model = SVC()\n",
+    "model.fit(X_train,y_train)\n",
+    "print(model.feature_importances_) #use inbuilt class feature_importances of tree based classifiers\n",
+    "#plot graph of feature importances for better visualization\n",
+    "feat_importances = pd.Series(model.feature_importances_, index=X_train.columns)\n",
+    "feat_importances.nlargest(10).plot(kind='barh')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "41b85ecd",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "index 57 is out of bounds for axis 0 with size 10",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 13\u001b[0m\n\u001b[1;32m     11\u001b[0m sorted_idx \u001b[38;5;241m=\u001b[39m perm_importance\u001b[38;5;241m.\u001b[39mimportances_mean\u001b[38;5;241m.\u001b[39margsort()\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m#sorted_idx.nlargest(10).plot(kind='barh')\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m plt\u001b[38;5;241m.\u001b[39mbarh(\u001b[43mfeatures\u001b[49m\u001b[43m[\u001b[49m\u001b[43msorted_idx\u001b[49m\u001b[43m]\u001b[49m, perm_importance\u001b[38;5;241m.\u001b[39mimportances_mean[sorted_idx])\n\u001b[1;32m     14\u001b[0m plt\u001b[38;5;241m.\u001b[39mxlabel(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPermutation Importance\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mIndexError\u001b[0m: index 57 is out of bounds for axis 0 with size 10"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "%matplotlib inline\n",
+    "\n",
+    "svc =  SVC(kernel='linear', C=.5)\n",
+    "svc.fit(X_train, y_train)\n",
+    "\n",
+    "perm_importance = permutation_importance(svc, X_test, y_test)\n",
+    "\n",
+    "feature_names = ['feature1', 'feature2', 'feature3', 'feature4','feature5','feature6','feature7', 'feature8','feature9','feature10' ]\n",
+    "features = np.array(feature_names)\n",
+    "\n",
+    "sorted_idx = perm_importance.importances_mean.argsort()\n",
+    "#sorted_idx.nlargest(10).plot(kind='barh')\n",
+    "plt.barh(features[sorted_idx], perm_importance.importances_mean[sorted_idx])\n",
+    "plt.xlabel(\"Permutation Importance\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "82798b56",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'SVC' object has no attribute 'dual_coef_'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[20], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m svm \u001b[38;5;241m=\u001b[39m SVC(gamma\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mscale\u001b[39m\u001b[38;5;124m'\u001b[39m, C\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m.50\u001b[39m, kernel \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlinear\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m pd\u001b[38;5;241m.\u001b[39mSeries(\u001b[38;5;28mabs\u001b[39m(\u001b[43msvm\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcoef_\u001b[49m[\u001b[38;5;241m0\u001b[39m]), index\u001b[38;5;241m=\u001b[39mfeatures\u001b[38;5;241m.\u001b[39mcolumns)\u001b[38;5;241m.\u001b[39mnlargest(\u001b[38;5;241m10\u001b[39m)\u001b[38;5;241m.\u001b[39mplot(kind\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbarh\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.8.12/envs/mcats/lib/python3.8/site-packages/sklearn/svm/_base.py:660\u001b[0m, in \u001b[0;36mBaseLibSVM.coef_\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    657\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mkernel \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlinear\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m    658\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcoef_ is only available when using a linear kernel\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 660\u001b[0m coef \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_get_coef\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    662\u001b[0m \u001b[38;5;66;03m# coef_ being a read-only property, it's better to mark the value as\u001b[39;00m\n\u001b[1;32m    663\u001b[0m \u001b[38;5;66;03m# immutable to avoid hiding potential bugs for the unsuspecting user.\u001b[39;00m\n\u001b[1;32m    664\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m sp\u001b[38;5;241m.\u001b[39missparse(coef):\n\u001b[1;32m    665\u001b[0m     \u001b[38;5;66;03m# sparse matrix do not have global flags\u001b[39;00m\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.8.12/envs/mcats/lib/python3.8/site-packages/sklearn/svm/_base.py:967\u001b[0m, in \u001b[0;36mBaseSVC._get_coef\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    966\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_get_coef\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m--> 967\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdual_coef_\u001b[49m\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m    968\u001b[0m         \u001b[38;5;66;03m# binary classifier\u001b[39;00m\n\u001b[1;32m    969\u001b[0m         coef \u001b[38;5;241m=\u001b[39m safe_sparse_dot(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdual_coef_, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msupport_vectors_)\n\u001b[1;32m    970\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    971\u001b[0m         \u001b[38;5;66;03m# 1vs1 classifier\u001b[39;00m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'SVC' object has no attribute 'dual_coef_'"
+     ]
+    }
+   ],
+   "source": [
+    "svm = SVC(gamma='scale', C=.50, kernel = 'linear')\n",
+    "pd.Series(abs(svm.coef_[0]), index=features.columns).nlargest(10).plot(kind='barh')\n"
    ]
   },
   {
@@ -1066,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 30,
    "id": "0e43ed6e",
    "metadata": {},
    "outputs": [
@@ -1077,6 +1172,88 @@
       "Training Set Accuracy: 57.56373937677054%\n",
       "Testing Set Accuracy: 47.018739352640544%\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'decision_function_shape': 'ovr',\n",
+       " 'break_ties': False,\n",
+       " 'kernel': 'sigmoid',\n",
+       " 'degree': 3,\n",
+       " 'gamma': 'scale',\n",
+       " 'coef0': 0.0,\n",
+       " 'tol': 0.001,\n",
+       " 'C': 0.5,\n",
+       " 'nu': 0.0,\n",
+       " 'epsilon': 0.0,\n",
+       " 'shrinking': True,\n",
+       " 'probability': False,\n",
+       " 'cache_size': 200,\n",
+       " 'class_weight': None,\n",
+       " 'verbose': False,\n",
+       " 'max_iter': -1,\n",
+       " 'random_state': None,\n",
+       " '_sparse': False,\n",
+       " 'n_features_in_': 87,\n",
+       " 'class_weight_': array([1., 1., 1., 1., 1., 1., 1., 1.]),\n",
+       " 'classes_': array([0, 1, 2, 3, 4, 5, 6, 7]),\n",
+       " '_gamma': 0.011561959866540978,\n",
+       " 'support_': array([   0,    4,    6, ..., 3523, 3525, 3526], dtype=int32),\n",
+       " 'support_vectors_': array([[-2.56970057,  4.13343298,  6.76796915, ...,  0.1945853 ,\n",
+       "          0.35723089,  0.37608834],\n",
+       "        [ 3.15499788,  4.87233663, -1.6911024 , ..., -0.20718374,\n",
+       "         -0.19397329,  0.1681363 ],\n",
+       "        [-1.09211226,  3.34315783,  0.0705337 , ..., -0.04523064,\n",
+       "         -0.06487431, -0.01263255],\n",
+       "        ...,\n",
+       "        [ 2.48856815,  3.02155884, -2.49851669, ..., -0.37410659,\n",
+       "         -0.10506977, -0.20421213],\n",
+       "        [ 2.97042315,  2.45056787, -1.60708133, ..., -0.0832837 ,\n",
+       "         -0.06638915, -0.19549923],\n",
+       "        [ 1.23766785,  4.00381883,  0.01455881, ..., -0.05080447,\n",
+       "          0.15896673, -0.19386845]]),\n",
+       " '_n_support': array([370, 137, 414, 375, 375, 443, 401, 369], dtype=int32),\n",
+       " 'dual_coef_': array([[ 0. ,  0. ,  0. , ..., -0.5, -0.5, -0.5],\n",
+       "        [ 0. ,  0. ,  0. , ..., -0. , -0.5, -0. ],\n",
+       "        [ 0.5,  0. ,  0.5, ..., -0.5, -0.5, -0. ],\n",
+       "        ...,\n",
+       "        [ 0. ,  0. ,  0. , ..., -0. , -0. , -0. ],\n",
+       "        [ 0. ,  0. ,  0. , ..., -0. , -0. , -0. ],\n",
+       "        [ 0.5,  0.5,  0. , ..., -0. , -0.5, -0. ]]),\n",
+       " 'intercept_': array([ 1.85153594, -0.84378464, -0.33591298,  0.38092983, -0.05572232,\n",
+       "        -0.51603653, -0.45749269, -3.83367369, -0.813093  ,  1.34141934,\n",
+       "        -0.12068253, -4.87733394, -3.00787511,  0.48814558,  1.34697406,\n",
+       "         0.71669438,  0.09671018,  0.81491435,  0.94461811,  0.52082102,\n",
+       "        -0.54096411,  0.03559982, -2.19323964, -1.8464676 , -0.39181912,\n",
+       "        -1.01029102, -0.00550496,  0.63568554]),\n",
+       " '_probA': array([], dtype=float64),\n",
+       " '_probB': array([], dtype=float64),\n",
+       " 'fit_status_': 0,\n",
+       " '_num_iter': array([ 78, 435, 524, 161, 777, 400, 319, 163,  87,  91,  98, 157, 123,\n",
+       "        385, 299, 332, 468, 488, 213, 354, 358, 375, 530, 466, 203, 287,\n",
+       "        277, 331], dtype=int32),\n",
+       " 'shape_fit_': (3530, 87),\n",
+       " '_intercept_': array([ 1.85153594, -0.84378464, -0.33591298,  0.38092983, -0.05572232,\n",
+       "        -0.51603653, -0.45749269, -3.83367369, -0.813093  ,  1.34141934,\n",
+       "        -0.12068253, -4.87733394, -3.00787511,  0.48814558,  1.34697406,\n",
+       "         0.71669438,  0.09671018,  0.81491435,  0.94461811,  0.52082102,\n",
+       "        -0.54096411,  0.03559982, -2.19323964, -1.8464676 , -0.39181912,\n",
+       "        -1.01029102, -0.00550496,  0.63568554]),\n",
+       " '_dual_coef_': array([[ 0. ,  0. ,  0. , ..., -0.5, -0.5, -0.5],\n",
+       "        [ 0. ,  0. ,  0. , ..., -0. , -0.5, -0. ],\n",
+       "        [ 0.5,  0. ,  0.5, ..., -0.5, -0.5, -0. ],\n",
+       "        ...,\n",
+       "        [ 0. ,  0. ,  0. , ..., -0. , -0. , -0. ],\n",
+       "        [ 0. ,  0. ,  0. , ..., -0. , -0. , -0. ],\n",
+       "        [ 0.5,  0.5,  0. , ..., -0. , -0.5, -0. ]]),\n",
+       " 'n_iter_': array([ 78, 435, 524, 161, 777, 400, 319, 163,  87,  91,  98, 157, 123,\n",
+       "        385, 299, 332, 468, 488, 213, 354, 358, 375, 530, 466, 203, 287,\n",
+       "        277, 331], dtype=int32)}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1103,13 +1280,58 @@
     "test_score = accuracy_score(y_test, y_pred_test)*100\n",
     "\n",
     "print(\"Training Set Accuracy:\",str(train_score)+'%')\n",
-    "print(\"Testing Set Accuracy:\",str(test_score)+'%')"
+    "print(\"Testing Set Accuracy:\",str(test_score)+'%')\n",
+    "\n",
+    "vars(model)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "5ec39dc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([370, 137, 414, 375, 375, 443, 401, 369], dtype=int32)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.n_support_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "0f580183",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.2.1'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sklearn\n",
+    "sklearn.__version__"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b3fd6c4",
+   "id": "83934f79",
    "metadata": {},
    "outputs": [],
    "source": []
