--- a/notebooks/Stacking Classifiesrs.ipynb
+++ b/notebooks/Stacking Classifiesrs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "0e13ca86",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.pipeline import make_pipeline\n",
-    "from sklearn.ensemble import StackingClassifier\n",
+    "from sklearn.ensemble import StackingClassifier, RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import LabelEncoder"
    ]
@@ -52,14 +52,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "95bb7bae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "svm = SVC(C= .1, gamma= 'scale', kernel='rbf', probability=True)\n",
+    "svm = SVC(C= .50, gamma= 'scale', kernel='sigmoid')\n",
     "\n",
-    "neigh = KNeighborsClassifier(weights='uniform', metric='manhattan', algorithm='kd_tree', n_neighbors=19)\n",
+    "rf= RandomForestClassifier(n_estimators=49, random_state=42, max_depth =3)  \n",
     "# Create a Logistic regression classifier\n",
     "#\n",
     "lgclassifier = LogisticRegression(max_iter=1000, C= 2, penalty = None, solver ='newton-cg')\n"
@@ -67,14 +67,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "810cd84d",
    "metadata": {},
    "outputs": [],
    "source": [
     "estimators = [\n",
     "     ('svm', svm),\n",
-    "    ('knn', neigh),\n",
+    "    ('rf', rf),\n",
     "    ('log', lgclassifier)]\n",
     "\n",
     "sclf = StackingClassifier(estimators=estimators,\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "70c8495e",
    "metadata": {},
    "outputs": [
@@ -92,8 +92,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random forest model training Accuracy: 0.70\n",
-      "Random forest model test Accuracy: 0.56\n"
+      "Random forest model training Accuracy: 0.58\n",
+      "Random forest model test Accuracy: 0.47\n"
      ]
     }
    ],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "8ed8e010",
    "metadata": {},
    "outputs": [
@@ -113,21 +113,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "KNN model training Accuracy: 0.76\n",
-      "KNN model test Accuracy: 0.55\n"
+      "Random Forest model training Accuracy: 0.55\n",
+      "Random Forest model test Accuracy: 0.50\n"
      ]
     }
    ],
    "source": [
-    "neigh.fit(X_train, y_train)\n",
-    "print(f\"\\nKNN model training Accuracy: {neigh.score(X_train, y_train):0.2f}\")\n",
-    "print(f\"KNN model test Accuracy: {neigh.score(X_test, y_test):0.2f}\")"
+    "rf.fit(X_train, y_train)\n",
+    "print(f\"Random Forest model training Accuracy: {rf.score(X_train, y_train):0.2f}\")\n",
+    "print(f\"Random Forest model test Accuracy: {rf.score(X_test, y_test):0.2f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "88c7e638",
    "metadata": {},
    "outputs": [
@@ -166,7 +165,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Stacking classifier training Accuracy: 0.87\n",
+      "Stacking classifier training Accuracy: 0.79\n",
       "Stacking classifier test Accuracy: 0.56\n"
      ]
     }
@@ -181,6 +180,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ee27cd6a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ead3937c",
    "metadata": {},
    "outputs": [],
    "source": []
