KNN model does not overfit but ensemble methods do

--- a/notebooks/Stacking Classifiesrs.ipynb
+++ b/notebooks/Stacking Classifiesrs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "0e13ca86",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
+   "id": "1fbf3322",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train= X_train[['tempo',\n",
+    " 'zero_crossings_mean',\n",
+    " 'zero_crossings_var',\n",
+    " 'spectral_centroids_mean',\n",
+    " 'spectral_centroids_var',\n",
+    " 'spectral_rolloff_mean',\n",
+    " 'spectral_rolloff_var',\n",
+    " 'mfcc_1_var',\n",
+    " 'mfcc_2_mean',\n",
+    " 'mfcc_2_var',\n",
+    " 'mfcc_5_var',\n",
+    " 'mfcc_6_var',\n",
+    " 'mfcc_7_var',\n",
+    " 'mfcc_8_var',\n",
+    " 'mfcc_11_mean',\n",
+    " 'mfcc_12_mean',\n",
+    " 'mfcc_13_mean',\n",
+    " 'mfcc_14_mean',\n",
+    " 'mfcc_15_mean',\n",
+    " 'mfcc_16_mean',\n",
+    " 'mfcc_19_mean',\n",
+    " 'mfcc_20_mean',\n",
+    " 'mfcc_21_mean',\n",
+    " 'mfcc_28_mean',\n",
+    " 'mfcc_28_var',\n",
+    " 'mfcc_29_mean',\n",
+    " 'mfcc_33_mean',\n",
+    " 'mfcc_37_mean',\n",
+    " 'mfcc_40_mean']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ebaec68b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test= X_test[['tempo',\n",
+    " 'zero_crossings_mean',\n",
+    " 'zero_crossings_var',\n",
+    " 'spectral_centroids_mean',\n",
+    " 'spectral_centroids_var',\n",
+    " 'spectral_rolloff_mean',\n",
+    " 'spectral_rolloff_var',\n",
+    " 'mfcc_1_var',\n",
+    " 'mfcc_2_mean',\n",
+    " 'mfcc_2_var',\n",
+    " 'mfcc_5_var',\n",
+    " 'mfcc_6_var',\n",
+    " 'mfcc_7_var',\n",
+    " 'mfcc_8_var',\n",
+    " 'mfcc_11_mean',\n",
+    " 'mfcc_12_mean',\n",
+    " 'mfcc_13_mean',\n",
+    " 'mfcc_14_mean',\n",
+    " 'mfcc_15_mean',\n",
+    " 'mfcc_16_mean',\n",
+    " 'mfcc_19_mean',\n",
+    " 'mfcc_20_mean',\n",
+    " 'mfcc_21_mean',\n",
+    " 'mfcc_28_mean',\n",
+    " 'mfcc_28_var',\n",
+    " 'mfcc_29_mean',\n",
+    " 'mfcc_33_mean',\n",
+    " 'mfcc_37_mean',\n",
+    " 'mfcc_40_mean']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "id": "95bb7bae",
    "metadata": {},
    "outputs": [],
@@ -60,14 +136,15 @@
     "svm = SVC(C= .50, gamma= 'scale', kernel='sigmoid')\n",
     "\n",
     "rf= RandomForestClassifier(n_estimators=49, random_state=42, max_depth =3)  \n",
-    "# Create a Logistic regression classifier\n",
-    "#\n",
-    "lgclassifier = LogisticRegression(max_iter=1000, C= 2, penalty = None, solver ='newton-cg')\n"
+    "\n",
+    "knn = KNeighborsClassifier(n_neighbors=90)\n",
+    "\n",
+    "log = LogisticRegression(max_iter=1000, C= 2, penalty = 'l2', solver ='newton-cg')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 83,
    "id": "810cd84d",
    "metadata": {},
    "outputs": [],
@@ -75,16 +152,17 @@
     "estimators = [\n",
     "     ('svm', svm),\n",
     "    ('rf', rf),\n",
-    "    ('log', lgclassifier)]\n",
+    "    ('knn', knn),\n",
+    "    ('log', log)]\n",
     "\n",
     "sclf = StackingClassifier(estimators=estimators,\n",
-    "                            final_estimator=lgclassifier,\n",
+    "                            final_estimator=log,\n",
     "                            cv=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 84,
    "id": "70c8495e",
    "metadata": {},
    "outputs": [
@@ -92,8 +170,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random forest model training Accuracy: 0.58\n",
-      "Random forest model test Accuracy: 0.47\n"
+      "Random forest model training Accuracy: 0.50\n",
+      "Random forest model test Accuracy: 0.48\n"
      ]
     }
    ],
@@ -105,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 85,
    "id": "8ed8e010",
    "metadata": {},
    "outputs": [
@@ -113,8 +191,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest model training Accuracy: 0.55\n",
-      "Random Forest model test Accuracy: 0.50\n"
+      "Random Forest model training Accuracy: 0.53\n",
+      "Random Forest model test Accuracy: 0.49\n"
      ]
     }
    ],
@@ -126,47 +204,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "88c7e638",
+   "execution_count": 86,
+   "id": "c8523c34",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/root/.pyenv/versions/3.8.12/envs/mcats/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:1181: UserWarning: Setting penalty=None will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n",
-      "/root/.pyenv/versions/3.8.12/envs/mcats/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:1181: UserWarning: Setting penalty=None will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n",
-      "/root/.pyenv/versions/3.8.12/envs/mcats/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:1181: UserWarning: Setting penalty=None will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n",
-      "/root/.pyenv/versions/3.8.12/envs/mcats/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:1181: UserWarning: Setting penalty=None will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n",
-      "/root/.pyenv/versions/3.8.12/envs/mcats/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:1181: UserWarning: Setting penalty=None will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n",
-      "/root/.pyenv/versions/3.8.12/envs/mcats/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:1181: UserWarning: Setting penalty=None will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n",
-      "/root/.pyenv/versions/3.8.12/envs/mcats/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:1181: UserWarning: Setting penalty=None will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n",
-      "/root/.pyenv/versions/3.8.12/envs/mcats/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:1181: UserWarning: Setting penalty=None will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n",
-      "/root/.pyenv/versions/3.8.12/envs/mcats/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:1181: UserWarning: Setting penalty=None will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n",
-      "/root/.pyenv/versions/3.8.12/envs/mcats/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:1181: UserWarning: Setting penalty=None will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n",
-      "/root/.pyenv/versions/3.8.12/envs/mcats/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:1181: UserWarning: Setting penalty=None will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n",
-      "/root/.pyenv/versions/3.8.12/envs/mcats/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:1181: UserWarning: Setting penalty=None will ignore the C and l1_ratio parameters\n",
-      "  warnings.warn(\n"
+      "KNN model training Accuracy: 0.57\n",
+      "KNN model test Accuracy: 0.49\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "knn.fit(X_train, y_train)\n",
+    "print(f\"KNN model training Accuracy: {knn.score(X_train, y_train):0.2f}\")\n",
+    "print(f\"KNN model test Accuracy: {knn.score(X_test, y_test):0.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "b165ee43",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic regression model training Accuracy: 0.62\n",
+      "Logistic regression model test Accuracy: 0.52\n"
+     ]
+    }
+   ],
+   "source": [
+    "log.fit(X_train, y_train)\n",
+    "print(f\"Logistic regression model training Accuracy: {log.score(X_train, y_train):0.2f}\")\n",
+    "print(f\"Logistic regression model test Accuracy: {log.score(X_test, y_test):0.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "88c7e638",
+   "metadata": {},
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "Stacking classifier training Accuracy: 0.79\n",
-      "Stacking classifier test Accuracy: 0.56\n"
+      "Stacking classifier training Accuracy: 0.68\n",
+      "Stacking classifier test Accuracy: 0.53\n"
      ]
     }
    ],
