--- a/notebooks/full jamendo data.ipynb
+++ b/notebooks/full jamendo data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c287966a",
    "metadata": {},
    "outputs": [
@@ -10,13 +10,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-07 23:22:02.063433: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2023-03-08 23:13:25.783930: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-03-07 23:22:02.422127: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2023-03-07 23:22:02.422170: I tensorflow/compiler/xla/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
-      "2023-03-07 23:22:03.349540: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
-      "2023-03-07 23:22:03.349735: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
-      "2023-03-07 23:22:03.349743: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
+      "2023-03-08 23:13:26.223506: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2023-03-08 23:13:26.223534: I tensorflow/compiler/xla/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
+      "2023-03-08 23:13:27.694960: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
+      "2023-03-08 23:13:27.695185: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
+      "2023-03-08 23:13:27.695195: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
      ]
     }
    ],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "e2665898",
    "metadata": {},
    "outputs": [],
@@ -68,6 +68,82 @@
     "y_val = val_data.iloc[:, -1]\n",
     "X_test = test_data.iloc[:, 1:-1]\n",
     "y_test = test_data.iloc[:, -1]    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "01eac565",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train= X_train[['tempo',\n",
+    " 'zero_crossings_mean',\n",
+    " 'zero_crossings_var',\n",
+    " 'spectral_centroids_mean',\n",
+    " 'spectral_centroids_var',\n",
+    " 'spectral_rolloff_mean',\n",
+    " 'spectral_rolloff_var',\n",
+    " 'mfcc_1_var',\n",
+    " 'mfcc_2_mean',\n",
+    " 'mfcc_2_var',\n",
+    " 'mfcc_5_var',\n",
+    " 'mfcc_6_var',\n",
+    " 'mfcc_7_var',\n",
+    " 'mfcc_8_var',\n",
+    " 'mfcc_11_mean',\n",
+    " 'mfcc_12_mean',\n",
+    " 'mfcc_13_mean',\n",
+    " 'mfcc_14_mean',\n",
+    " 'mfcc_15_mean',\n",
+    " 'mfcc_16_mean',\n",
+    " 'mfcc_19_mean',\n",
+    " 'mfcc_20_mean',\n",
+    " 'mfcc_21_mean',\n",
+    " 'mfcc_28_mean',\n",
+    " 'mfcc_28_var',\n",
+    " 'mfcc_29_mean',\n",
+    " 'mfcc_33_mean',\n",
+    " 'mfcc_37_mean',\n",
+    " 'mfcc_40_mean']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b586b594",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test= X_test[['tempo',\n",
+    " 'zero_crossings_mean',\n",
+    " 'zero_crossings_var',\n",
+    " 'spectral_centroids_mean',\n",
+    " 'spectral_centroids_var',\n",
+    " 'spectral_rolloff_mean',\n",
+    " 'spectral_rolloff_var',\n",
+    " 'mfcc_1_var',\n",
+    " 'mfcc_2_mean',\n",
+    " 'mfcc_2_var',\n",
+    " 'mfcc_5_var',\n",
+    " 'mfcc_6_var',\n",
+    " 'mfcc_7_var',\n",
+    " 'mfcc_8_var',\n",
+    " 'mfcc_11_mean',\n",
+    " 'mfcc_12_mean',\n",
+    " 'mfcc_13_mean',\n",
+    " 'mfcc_14_mean',\n",
+    " 'mfcc_15_mean',\n",
+    " 'mfcc_16_mean',\n",
+    " 'mfcc_19_mean',\n",
+    " 'mfcc_20_mean',\n",
+    " 'mfcc_21_mean',\n",
+    " 'mfcc_28_mean',\n",
+    " 'mfcc_28_var',\n",
+    " 'mfcc_29_mean',\n",
+    " 'mfcc_33_mean',\n",
+    " 'mfcc_37_mean',\n",
+    " 'mfcc_40_mean']]"
    ]
   },
   {
@@ -221,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "0ab3b891",
    "metadata": {},
    "outputs": [
@@ -231,27 +307,28 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.77      0.76      0.77       477\n",
-      "           1       0.88      0.94      0.91       437\n",
-      "           2       0.62      0.56      0.59       423\n",
-      "           3       0.73      0.72      0.73       424\n",
-      "           4       0.74      0.83      0.78       443\n",
-      "           5       0.70      0.62      0.66       450\n",
-      "           6       0.68      0.64      0.66       419\n",
-      "           7       0.73      0.80      0.76       457\n",
+      "           0       0.69      0.65      0.67       477\n",
+      "           1       0.75      0.90      0.82       437\n",
+      "           2       0.52      0.39      0.44       423\n",
+      "           3       0.57      0.56      0.57       424\n",
+      "           4       0.62      0.80      0.70       443\n",
+      "           5       0.49      0.43      0.46       450\n",
+      "           6       0.58      0.44      0.50       419\n",
+      "           7       0.65      0.76      0.70       457\n",
       "\n",
-      "    accuracy                           0.74      3530\n",
-      "   macro avg       0.73      0.73      0.73      3530\n",
-      "weighted avg       0.73      0.74      0.73      3530\n",
+      "    accuracy                           0.62      3530\n",
+      "   macro avg       0.61      0.62      0.61      3530\n",
+      "weighted avg       0.61      0.62      0.61      3530\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "clf1 = LogisticRegression(max_iter=1000, C= 2, solver ='newton-cg')\n",
-    "clf2 = RandomForestClassifier(n_estimators=49, random_state=42, max_depth =3)  \n",
+    "clf1 = LogisticRegression(max_iter=1000, C= .5,penalty = \"l2\", solver ='newton-cg')\n",
+    "clf2 = RandomForestClassifier(n_estimators=48, random_state=42, max_depth =4)  \n",
     "clf3 = SVC(C= .50, gamma= 'scale', kernel='sigmoid', probability=True)\n",
-    "eclf1 = VotingClassifier(estimators=[('logistic', clf1), ('RF', clf2), ('SVC', clf3)], voting='soft')\n",
+    "clf4 = KNeighborsClassifier(n_neighbors=80)\n",
+    "eclf1 = VotingClassifier(estimators=[('logistic', clf1), ('RF', clf2), ('SVC', clf3), ('KNN', clf4)], voting='soft')\n",
     "eclf1.fit(X_train, y_train)\n",
     "predictions = eclf1.predict(X_train)\n",
     "print(classification_report(y_train, predictions))"
@@ -259,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "4da84a0b",
    "metadata": {},
    "outputs": [
@@ -269,27 +346,28 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.52      0.66      0.58       114\n",
-      "           1       0.72      0.92      0.81       116\n",
-      "           2       0.42      0.39      0.40       148\n",
-      "           3       0.57      0.50      0.53       175\n",
-      "           4       0.56      0.72      0.63       169\n",
-      "           5       0.50      0.38      0.43       145\n",
-      "           6       0.50      0.35      0.41       168\n",
-      "           7       0.51      0.54      0.53       130\n",
+      "           0       0.54      0.65      0.59       114\n",
+      "           1       0.65      0.88      0.75       116\n",
+      "           2       0.43      0.34      0.38       148\n",
+      "           3       0.40      0.34      0.37       175\n",
+      "           4       0.55      0.72      0.63       169\n",
+      "           5       0.35      0.32      0.33       145\n",
+      "           6       0.50      0.33      0.40       168\n",
+      "           7       0.50      0.55      0.53       130\n",
       "\n",
-      "    accuracy                           0.54      1165\n",
-      "   macro avg       0.54      0.56      0.54      1165\n",
-      "weighted avg       0.53      0.54      0.53      1165\n",
+      "    accuracy                           0.50      1165\n",
+      "   macro avg       0.49      0.52      0.50      1165\n",
+      "weighted avg       0.48      0.50      0.48      1165\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "clf1 = LogisticRegression(max_iter=1000, C= 2, solver ='newton-cg')\n",
-    "clf2 = RandomForestClassifier(n_estimators=49, random_state=42, max_depth =3)  \n",
+    "clf1 = LogisticRegression(max_iter=1000, C= .5, penalty = \"l2\", solver ='newton-cg')\n",
+    "clf2 = RandomForestClassifier(n_estimators=48, random_state=42, max_depth =4)  \n",
     "clf3 = SVC(C= .50, gamma= 'scale', kernel='sigmoid', probability=True)\n",
-    "eclf1 = VotingClassifier(estimators=[('logistic', clf1), ('RF', clf2), ('SVC', clf3)], voting='soft')\n",
+    "clf4 = KNeighborsClassifier(n_neighbors=80)\n",
+    "eclf1 = VotingClassifier(estimators=[('logistic', clf1), ('RF', clf2), ('SVC', clf3), ('KNN', clf4)], voting='soft')\n",
     "eclf1.fit(X_train, y_train)\n",
     "predictions = eclf1.predict(X_test)\n",
     "print(classification_report(y_test, predictions))"
