--- a/notebooks/KNN model.ipynb
+++ b/notebooks/KNN model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "920d2da2",
    "metadata": {},
    "outputs": [],
@@ -22,12 +22,14 @@
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.model_selection import cross_validate\n",
     "from sklearn.metrics import classification_report\n",
-    "from sklearn.model_selection import train_test_split\n"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.feature_selection import VarianceThreshold\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "eb037292",
    "metadata": {},
    "outputs": [],
@@ -44,6 +46,429 @@
     "y_val = val_data.iloc[:, -1]\n",
     "X_test = test_data.iloc[:, 1:-1]\n",
     "y_test = test_data.iloc[:, -1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4f79b40b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tempo</th>\n",
+       "      <th>beats_mean</th>\n",
+       "      <th>beats_var</th>\n",
+       "      <th>zero_crossings_mean</th>\n",
+       "      <th>zero_crossings_var</th>\n",
+       "      <th>spectral_centroids_mean</th>\n",
+       "      <th>spectral_centroids_var</th>\n",
+       "      <th>spectral_rolloff_mean</th>\n",
+       "      <th>spectral_rolloff_var</th>\n",
+       "      <th>mfcc_1_mean</th>\n",
+       "      <th>...</th>\n",
+       "      <th>mfcc_36_mean</th>\n",
+       "      <th>mfcc_36_var</th>\n",
+       "      <th>mfcc_37_mean</th>\n",
+       "      <th>mfcc_37_var</th>\n",
+       "      <th>mfcc_38_mean</th>\n",
+       "      <th>mfcc_38_var</th>\n",
+       "      <th>mfcc_39_mean</th>\n",
+       "      <th>mfcc_39_var</th>\n",
+       "      <th>mfcc_40_mean</th>\n",
+       "      <th>mfcc_40_var</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.023760</td>\n",
+       "      <td>0.041805</td>\n",
+       "      <td>0.369683</td>\n",
+       "      <td>-1.667139</td>\n",
+       "      <td>-1.857651</td>\n",
+       "      <td>-1.014139</td>\n",
+       "      <td>1.617622</td>\n",
+       "      <td>-0.748374</td>\n",
+       "      <td>3.350232</td>\n",
+       "      <td>-1.439589</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.872739</td>\n",
+       "      <td>-0.699038</td>\n",
+       "      <td>0.211035</td>\n",
+       "      <td>-0.785231</td>\n",
+       "      <td>-1.540956</td>\n",
+       "      <td>-0.814879</td>\n",
+       "      <td>-0.169494</td>\n",
+       "      <td>-0.498867</td>\n",
+       "      <td>-0.134263</td>\n",
+       "      <td>-0.642835</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-1.093593</td>\n",
+       "      <td>0.131433</td>\n",
+       "      <td>0.158320</td>\n",
+       "      <td>0.245864</td>\n",
+       "      <td>0.307460</td>\n",
+       "      <td>0.027929</td>\n",
+       "      <td>4.313408</td>\n",
+       "      <td>-0.164304</td>\n",
+       "      <td>4.167452</td>\n",
+       "      <td>-1.413251</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-3.029440</td>\n",
+       "      <td>0.205955</td>\n",
+       "      <td>-1.972509</td>\n",
+       "      <td>-0.701640</td>\n",
+       "      <td>-0.696683</td>\n",
+       "      <td>-0.315596</td>\n",
+       "      <td>0.637620</td>\n",
+       "      <td>-0.674785</td>\n",
+       "      <td>-0.006971</td>\n",
+       "      <td>-0.289456</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-1.093593</td>\n",
+       "      <td>-0.891415</td>\n",
+       "      <td>-1.272266</td>\n",
+       "      <td>1.897239</td>\n",
+       "      <td>1.885262</td>\n",
+       "      <td>1.230415</td>\n",
+       "      <td>2.093804</td>\n",
+       "      <td>0.791755</td>\n",
+       "      <td>1.706036</td>\n",
+       "      <td>0.336232</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1.799229</td>\n",
+       "      <td>-0.692739</td>\n",
+       "      <td>-2.398123</td>\n",
+       "      <td>-0.617969</td>\n",
+       "      <td>-2.066134</td>\n",
+       "      <td>-0.177092</td>\n",
+       "      <td>-2.151214</td>\n",
+       "      <td>-0.192205</td>\n",
+       "      <td>-0.765171</td>\n",
+       "      <td>-0.329696</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 89 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      tempo  beats_mean  beats_var  zero_crossings_mean  zero_crossings_var  \\\n",
+       "0  1.023760    0.041805   0.369683            -1.667139           -1.857651   \n",
+       "1 -1.093593    0.131433   0.158320             0.245864            0.307460   \n",
+       "2 -1.093593   -0.891415  -1.272266             1.897239            1.885262   \n",
+       "\n",
+       "   spectral_centroids_mean  spectral_centroids_var  spectral_rolloff_mean  \\\n",
+       "0                -1.014139                1.617622              -0.748374   \n",
+       "1                 0.027929                4.313408              -0.164304   \n",
+       "2                 1.230415                2.093804               0.791755   \n",
+       "\n",
+       "   spectral_rolloff_var  mfcc_1_mean  ...  mfcc_36_mean  mfcc_36_var  \\\n",
+       "0              3.350232    -1.439589  ...      0.872739    -0.699038   \n",
+       "1              4.167452    -1.413251  ...     -3.029440     0.205955   \n",
+       "2              1.706036     0.336232  ...     -1.799229    -0.692739   \n",
+       "\n",
+       "   mfcc_37_mean  mfcc_37_var  mfcc_38_mean  mfcc_38_var  mfcc_39_mean  \\\n",
+       "0      0.211035    -0.785231     -1.540956    -0.814879     -0.169494   \n",
+       "1     -1.972509    -0.701640     -0.696683    -0.315596      0.637620   \n",
+       "2     -2.398123    -0.617969     -2.066134    -0.177092     -2.151214   \n",
+       "\n",
+       "   mfcc_39_var  mfcc_40_mean  mfcc_40_var  \n",
+       "0    -0.498867     -0.134263    -0.642835  \n",
+       "1    -0.674785     -0.006971    -0.289456  \n",
+       "2    -0.192205     -0.765171    -0.329696  \n",
+       "\n",
+       "[3 rows x 89 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "939444e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3530, 89)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vt = VarianceThreshold()\n",
+    "X_train= X_train.select_dtypes(include='number')\n",
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d8acbf25",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.02375954,  0.04180475,  0.36968346, ..., -0.49886694,\n",
+       "        -0.1342627 , -0.64283489],\n",
+       "       [-1.09359267,  0.13143251,  0.15832019, ..., -0.67478531,\n",
+       "        -0.0069708 , -0.28945608],\n",
+       "       [-1.09359267, -0.89141503, -1.27226625, ..., -0.19220541,\n",
+       "        -0.76517081, -0.32969632],\n",
+       "       ...,\n",
+       "       [ 1.35562585,  0.33371901,  0.58955857, ..., -0.15415505,\n",
+       "        -0.12889669, -0.13465816],\n",
+       "       [ 0.49892374, -0.30768882, -0.08843606, ..., -0.27178156,\n",
+       "        -0.27414118,  0.17479521],\n",
+       "       [ 1.35562585,  0.33958549,  0.56432125, ..., -0.45770788,\n",
+       "        -0.64724537, -0.50156119]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transformed = vt.fit_transform(X_train)\n",
+    "transformed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2f7f02ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = vt.fit(X_train)\n",
+    "\n",
+    "mask = vt.get_support()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "740eff00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train=X_train.loc[:, mask]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "24bd13a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3530, 89)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d4979502",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3530, 29)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vt = VarianceThreshold(threshold=1)\n",
+    "\n",
+    "# Fit\n",
+    "_ = vt.fit(X_train)\n",
+    "\n",
+    "# Get the boolean mask\n",
+    "mask = vt.get_support()\n",
+    "\n",
+    "X_train_reduced = X_train.loc[:, mask]\n",
+    "X_train_reduced.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "8d898f3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['tempo',\n",
+       " 'zero_crossings_mean',\n",
+       " 'zero_crossings_var',\n",
+       " 'spectral_centroids_mean',\n",
+       " 'spectral_centroids_var',\n",
+       " 'spectral_rolloff_mean',\n",
+       " 'spectral_rolloff_var',\n",
+       " 'mfcc_1_var',\n",
+       " 'mfcc_2_mean',\n",
+       " 'mfcc_2_var',\n",
+       " 'mfcc_5_var',\n",
+       " 'mfcc_6_var',\n",
+       " 'mfcc_7_var',\n",
+       " 'mfcc_8_var',\n",
+       " 'mfcc_11_mean',\n",
+       " 'mfcc_12_mean',\n",
+       " 'mfcc_13_mean',\n",
+       " 'mfcc_14_mean',\n",
+       " 'mfcc_15_mean',\n",
+       " 'mfcc_16_mean',\n",
+       " 'mfcc_19_mean',\n",
+       " 'mfcc_20_mean',\n",
+       " 'mfcc_21_mean',\n",
+       " 'mfcc_28_mean',\n",
+       " 'mfcc_28_var',\n",
+       " 'mfcc_29_mean',\n",
+       " 'mfcc_33_mean',\n",
+       " 'mfcc_37_mean',\n",
+       " 'mfcc_40_mean']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model  = KNeighborsClassifier()\n",
+    "model.feature_names = list(X_train_reduced.columns.values)\n",
+    "model.feature_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "1689c6c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = X_train[['tempo',\n",
+    " 'zero_crossings_mean',\n",
+    " 'zero_crossings_var',\n",
+    " 'spectral_centroids_mean',\n",
+    " 'spectral_centroids_var',\n",
+    " 'spectral_rolloff_mean',\n",
+    " 'spectral_rolloff_var',\n",
+    " 'mfcc_1_var',\n",
+    " 'mfcc_2_mean',\n",
+    " 'mfcc_2_var',\n",
+    " 'mfcc_5_var',\n",
+    " 'mfcc_6_var',\n",
+    " 'mfcc_7_var',\n",
+    " 'mfcc_8_var',\n",
+    " 'mfcc_11_mean',\n",
+    " 'mfcc_12_mean',\n",
+    " 'mfcc_13_mean',\n",
+    " 'mfcc_14_mean',\n",
+    " 'mfcc_15_mean',\n",
+    " 'mfcc_16_mean',\n",
+    " 'mfcc_19_mean',\n",
+    " 'mfcc_20_mean',\n",
+    " 'mfcc_21_mean',\n",
+    " 'mfcc_28_mean',\n",
+    " 'mfcc_28_var',\n",
+    " 'mfcc_29_mean',\n",
+    " 'mfcc_33_mean',\n",
+    " 'mfcc_37_mean',\n",
+    " 'mfcc_40_mean']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "d17a9636",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test= X_test[['tempo',\n",
+    " 'zero_crossings_mean',\n",
+    " 'zero_crossings_var',\n",
+    " 'spectral_centroids_mean',\n",
+    " 'spectral_centroids_var',\n",
+    " 'spectral_rolloff_mean',\n",
+    " 'spectral_rolloff_var',\n",
+    " 'mfcc_1_var',\n",
+    " 'mfcc_2_mean',\n",
+    " 'mfcc_2_var',\n",
+    " 'mfcc_5_var',\n",
+    " 'mfcc_6_var',\n",
+    " 'mfcc_7_var',\n",
+    " 'mfcc_8_var',\n",
+    " 'mfcc_11_mean',\n",
+    " 'mfcc_12_mean',\n",
+    " 'mfcc_13_mean',\n",
+    " 'mfcc_14_mean',\n",
+    " 'mfcc_15_mean',\n",
+    " 'mfcc_16_mean',\n",
+    " 'mfcc_19_mean',\n",
+    " 'mfcc_20_mean',\n",
+    " 'mfcc_21_mean',\n",
+    " 'mfcc_28_mean',\n",
+    " 'mfcc_28_var',\n",
+    " 'mfcc_29_mean',\n",
+    " 'mfcc_33_mean',\n",
+    " 'mfcc_37_mean',\n",
+    " 'mfcc_40_mean']]"
    ]
   },
   {
@@ -66,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "id": "fbcd5ca5",
    "metadata": {},
    "outputs": [
@@ -76,24 +501,24 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "      hiphop       0.96      0.99      0.97       477\n",
-      "   classical       0.97      0.96      0.96       437\n",
-      "         pop       0.96      0.96      0.96       423\n",
-      "  electronic       0.98      0.96      0.97       424\n",
-      "       metal       0.98      0.98      0.98       443\n",
-      "        rock       0.98      0.96      0.97       450\n",
-      "     country       0.96      0.96      0.96       419\n",
-      "      reggae       0.97      1.00      0.98       457\n",
+      "      hiphop       0.66      0.51      0.58       477\n",
+      "   classical       0.75      0.79      0.77       437\n",
+      "         pop       0.48      0.34      0.40       423\n",
+      "  electronic       0.57      0.47      0.51       424\n",
+      "       metal       0.57      0.81      0.67       443\n",
+      "        rock       0.47      0.46      0.46       450\n",
+      "     country       0.51      0.45      0.48       419\n",
+      "      reggae       0.58      0.77      0.66       457\n",
       "\n",
-      "    accuracy                           0.97      3530\n",
-      "   macro avg       0.97      0.97      0.97      3530\n",
-      "weighted avg       0.97      0.97      0.97      3530\n",
+      "    accuracy                           0.58      3530\n",
+      "   macro avg       0.57      0.58      0.57      3530\n",
+      "weighted avg       0.57      0.58      0.57      3530\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "knn = KNeighborsClassifier()\n",
+    "knn = KNeighborsClassifier(n_neighbors=89)\n",
     "knn.fit(X_train, y_train)\n",
     "preds = knn.predict(X_train)\n",
     "#y_ true is y_test  predict on x_text  y_pred is the output of the model\n",
@@ -105,7 +530,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "id": "7440cd88",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "d714221a",
    "metadata": {},
    "outputs": [
@@ -115,23 +548,24 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "      hiphop       0.51      0.57      0.54       140\n",
-      "   classical       0.89      0.83      0.86       172\n",
-      "         pop       0.37      0.36      0.36       164\n",
-      "  electronic       0.47      0.32      0.38       148\n",
-      "       metal       0.58      0.72      0.64       122\n",
-      "        rock       0.33      0.27      0.29       154\n",
-      "     country       0.45      0.50      0.48       119\n",
-      "      reggae       0.49      0.58      0.53       155\n",
+      "      hiphop       0.57      0.41      0.47       140\n",
+      "   classical       0.82      0.76      0.79       172\n",
+      "         pop       0.37      0.26      0.30       164\n",
+      "  electronic       0.45      0.39      0.42       148\n",
+      "       metal       0.52      0.69      0.59       122\n",
+      "        rock       0.25      0.27      0.26       154\n",
+      "     country       0.34      0.37      0.35       119\n",
+      "      reggae       0.53      0.73      0.61       155\n",
       "\n",
-      "    accuracy                           0.52      1174\n",
-      "   macro avg       0.51      0.52      0.51      1174\n",
-      "weighted avg       0.52      0.52      0.51      1174\n",
+      "    accuracy                           0.49      1174\n",
+      "   macro avg       0.48      0.48      0.48      1174\n",
+      "weighted avg       0.49      0.49      0.48      1174\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "knn = KNeighborsClassifier(n_neighbors=89)\n",
     "knn.fit(X_train, y_train)\n",
     "preds = knn.predict(X_test)\n",
     "#y_ true is y_test  predict on x_text  y_pred is the output of the model\n",
